# scikit-build-issue2

./: .gitignore  CMakeLists.txt  README.md  setup.py
.github/workflows/: build-matrix.json  python.yml
src/libmymodule/: libheader.cpp  libheader.hpp  macros.hpp
src/pkg/: module.cpp
test/: test_load.py
